cabal-version:      2.4
name:               roomsAndMazes
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             EMQ-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                    , Control.Effect.Array
                    , Control.Carrier.Array.IO
                    , Room
                    , SizeArray
                    , GameOfLive

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , fused-effects
                    , optics
                    , fused-effects-optics
                    , fused-effects-random	
                    , fused-effects-mwc-random	
                    , array
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010

executable roomsAndMazes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        roomsAndMazes

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite roomsAndMazes-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
